--- a/penguins/cohort.ipynb
+++ b/penguins/cohort.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 8,
    "id": "212a0538-62b5-4875-a59c-1a4e1a833a07",
    "metadata": {
     "tags": []
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 9,
    "id": "c1f894e2",
    "metadata": {
     "tags": []
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 10,
    "id": "806bcb29-2999-4126-90dd-0c929a68c746",
    "metadata": {
     "tags": []
@@ -191,14 +191,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\n",
-      "    \"Location\": \"/mlschool\"\n",
-      "}\n"
+      "\n",
+      "An error occurred (BucketAlreadyOwnedByYou) when calling the CreateBucket operation: Your previous request to create the named bucket succeeded and you already own it.\n"
      ]
     }
    ],
    "source": [
-    "!aws s3api create-bucket --bucket $BUCKET"
+    "#!aws s3api create-bucket --bucket $BUCKET\n",
+    "!aws s3api create-bucket --bucket $BUCKET --create-bucket-configuration LocationConstraint=\"us-west-1\""
    ]
   },
   {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 11,
    "id": "0b03948f-0eba-440f-b439-2b9aa2b87c80",
    "metadata": {
     "tags": []
@@ -220,10 +220,10 @@
     {
      "data": {
       "text/plain": [
-       "'s3://mlschool/penguins/data/data.csv'"
+       "'s3://penguins123/penguins/data/data.csv'"
       ]
      },
-     "execution_count": 272,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 12,
    "id": "f1cd2f0e-446d-48a9-a008-b4f1cc593bfc",
    "metadata": {
     "tags": []
@@ -372,7 +372,7 @@
        "4       3450.0  FEMALE  "
       ]
      },
-     "execution_count": 273,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 13,
    "id": "f2107c25-e730-4e22-a1b8-5bda53e61124",
    "metadata": {
     "tags": []
@@ -571,7 +571,7 @@
        "max     6300.000000   NaN  "
       ]
      },
-     "execution_count": 274,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 14,
    "id": "1242122a-726e-4c37-a718-dd8e873d1612",
    "metadata": {
     "tags": []
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 15,
    "id": "cf1cf582-8831-4f83-bb17-2175afb193e8",
    "metadata": {
     "tags": []
@@ -661,7 +661,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 276,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -15394,7 +15394,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   },
   "lcc_arn": "arn:aws:sagemaker:us-east-1:325223348818:studio-lifecycle-config/packages",
   "toc-autonumbering": false,
