--- a/program/cohort.ipynb
+++ b/program/cohort.ipynb
@@ -5351,7 +5351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 406,
    "id": "42daa82b",
    "metadata": {},
    "outputs": [
@@ -5360,7 +5360,7 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"name\": \"species\",\n",
+      "  \"name\": \"island\",\n",
       "  \"inferred_type\": \"String\",\n",
       "  \"string_statistics\": {\n",
       "    \"common\": {\n",
@@ -5372,16 +5372,16 @@
       "      \"categorical\": {\n",
       "        \"buckets\": [\n",
       "          {\n",
-      "            \"value\": \"Adelie\",\n",
-      "            \"count\": 94\n",
+      "            \"value\": \"Dream\",\n",
+      "            \"count\": 89\n",
       "          },\n",
       "          {\n",
-      "            \"value\": \"Chinstrap\",\n",
-      "            \"count\": 48\n",
+      "            \"value\": \"Torgersen\",\n",
+      "            \"count\": 24\n",
       "          },\n",
       "          {\n",
-      "            \"value\": \"Gentoo\",\n",
-      "            \"count\": 90\n",
+      "            \"value\": \"Biscoe\",\n",
+      "            \"count\": 119\n",
       "          }\n",
       "        ]\n",
       "      }\n",
@@ -5398,7 +5398,7 @@
     "    response = json.loads(\n",
     "        S3Downloader.read_file(f\"{DATA_QUALITY_LOCATION}/statistics.json\")\n",
     "    )\n",
-    "    print(json.dumps(response[\"features\"][0], indent=2))\n",
+    "    print(json.dumps(response[\"features\"][1], indent=2))\n",
     "except Exception as e:\n",
     "    pass"
    ]
@@ -5413,7 +5413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 405,
    "id": "898d9626",
    "metadata": {},
    "outputs": [
@@ -5422,14 +5422,14 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"name\": \"species\",\n",
+      "  \"name\": \"island\",\n",
       "  \"inferred_type\": \"String\",\n",
       "  \"completeness\": 1.0,\n",
       "  \"string_constraints\": {\n",
       "    \"domains\": [\n",
-      "      \"Adelie\",\n",
-      "      \"Chinstrap\",\n",
-      "      \"Gentoo\"\n",
+      "      \"Dream\",\n",
+      "      \"Torgersen\",\n",
+      "      \"Biscoe\"\n",
       "    ]\n",
       "  }\n",
       "}\n"
@@ -5439,7 +5439,7 @@
    "source": [
     "try:\n",
     "    response = json.loads(S3Downloader.read_file(f\"{DATA_QUALITY_LOCATION}/constraints.json\"))\n",
-    "    print(json.dumps(response[\"features\"][0], indent=2))\n",
+    "    print(json.dumps(response[\"features\"][1], indent=2))\n",
     "except Exception as e:\n",
     "    pass"
    ]
