--- a/program/setup.qmd
+++ b/program/setup.qmd
@@ -39,11 +39,11 @@ $ docker ps
 
 ## Configuring AWS
 
-If you don't have one yet, create a new AWS account. You want to use a user with administrative privileges.
+If you don't have one yet, create a new AWS account. A community member noticed that indicating the account is for personal use and his interest is in Machine Learning gave him immediate access to the hardware we need for the program.
 
-We'll need access to `ml.m5.xlarge` instances during the program. By default, the quota for a new account is zero, so you need to request a quota increase. 
-You can do this in your AWS account, under Service Quotas > AWS Services > Amazon SageMaker. Find `ml.m5.xlarge` and request a quota increase for processing 
-jobs, training jobs, transform jobs, and endpoint usage. Ask for a minimum of 3 instances.
+We'll need access to `ml.m5.xlarge` instances. By default, the quota for a new account is zero, but the tip above might fix this problem. If it doesn't, you'll need to request a quota increase. 
+
+You can do this in your AWS account under Service Quotas > AWS Services > Amazon SageMaker. Find `ml.m5.xlarge` and request a quota increase for processing jobs, training jobs, transform jobs, and endpoint usage. Ask for a minimum of 3 instances.
 
 You'll need access to AWS from your local environment. [Install the AWS CLI](https://docs.aws.amazon.com/cli/latest/userguide/getting-started-install.html) and [configure it](https://docs.aws.amazon.com/cli/latest/userguide/cli-configure-files.html) with your 
 `aws_access_key_id` and `aws_secret_access_key.` 
