--- a/program/cohort.ipynb
+++ b/program/cohort.ipynb
@@ -42,10 +42,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 62,
    "id": "4b2265b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
+      "The dotenv extension is already loaded. To reload it, use:\n",
+      "  %reload_ext dotenv\n"
+     ]
+    }
+   ],
    "source": [
     "#| hide\n",
     "\n",
@@ -89,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 63,
    "id": "32c4d764",
    "metadata": {},
    "outputs": [],
@@ -107,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 64,
    "id": "3164a3af",
    "metadata": {},
    "outputs": [],
@@ -130,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 65,
    "id": "7bc40d28",
    "metadata": {},
    "outputs": [],
@@ -149,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 66,
    "id": "3b3f17e5",
    "metadata": {},
    "outputs": [],
@@ -189,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 67,
    "id": "942a01b5",
    "metadata": {},
    "outputs": [],
@@ -230,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 68,
    "id": "f1cd2f0e-446d-48a9-a008-b4f1cc593bfc",
    "metadata": {
     "tags": []
@@ -337,7 +348,7 @@
        "4       3450.0  FEMALE  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 69,
    "id": "f2107c25-e730-4e22-a1b8-5bda53e61124",
    "metadata": {
     "tags": []
@@ -553,7 +564,7 @@
        "max     6300.000000   NaN  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 70,
    "id": "1242122a-726e-4c37-a718-dd8e873d1612",
    "metadata": {
     "tags": []
@@ -630,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 71,
    "id": "cf1cf582-8831-4f83-bb17-2175afb193e8",
    "metadata": {
     "tags": []
@@ -645,7 +656,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 72,
    "id": "cc42cb08-275c-4b05-9d2b-77052da2f336",
    "metadata": {
     "tags": []
@@ -684,7 +695,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -703,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 73,
    "id": "3c57d55d-afd6-467a-a7a8-ff04132770ed",
    "metadata": {
     "tags": []
@@ -722,7 +733,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 74,
    "id": "2852c740",
    "metadata": {},
    "outputs": [
@@ -791,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 75,
    "id": "707cc972",
    "metadata": {},
    "outputs": [
@@ -839,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 76,
    "id": "3daf3ba1-d218-4ad4-b862-af679b91273f",
    "metadata": {
     "tags": []
@@ -919,7 +930,7 @@
        "body_mass_g        640316.716388  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -944,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 77,
    "id": "1d793e09-2cb9-47ff-a0e6-199a0f4fc1b3",
    "metadata": {
     "tags": []
@@ -1024,7 +1035,7 @@
        "body_mass_g           1.000000  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1049,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 78,
    "id": "1258c99d",
    "metadata": {},
    "outputs": [
@@ -1089,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 79,
    "id": "45b0a87f-028d-477f-9b65-199728c0b7ee",
    "metadata": {
     "tags": []
@@ -1143,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 80,
    "id": "fb6ba7c0-1bd6-4fe5-8b7f-f6cbdfd3846c",
    "metadata": {
     "tags": []
@@ -1334,7 +1345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 81,
    "id": "d1f122a4-acff-4687-91b9-bfef13567d88",
    "metadata": {
     "tags": []
@@ -1344,14 +1355,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\n",
+      "\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\n",
       "\u001b[32m\u001b[32m\u001b[1m8 passed\u001b[0m\u001b[32m in 0.17s\u001b[0m\u001b[0m\n"
      ]
     }
@@ -1478,7 +1482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 82,
    "id": "d88e9ccf",
    "metadata": {},
    "outputs": [],
@@ -1498,7 +1502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 83,
    "id": "331fe373",
    "metadata": {},
    "outputs": [],
@@ -1525,7 +1529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 84,
    "id": "3aa4471a",
    "metadata": {},
    "outputs": [
@@ -1572,7 +1576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 85,
    "id": "cdbd9303",
    "metadata": {
     "tags": []
@@ -1653,7 +1657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 86,
    "id": "e140642a",
    "metadata": {
     "tags": []
@@ -1663,16 +1667,16 @@
      "data": {
       "text/plain": [
        "{'PipelineArn': 'arn:aws:sagemaker:us-east-1:325223348818:pipeline/session1-pipeline',\n",
-       " 'ResponseMetadata': {'RequestId': '1a583251-fced-460c-ad0f-ddda5589cbed',\n",
+       " 'ResponseMetadata': {'RequestId': 'e8162fd6-2db7-4aa8-8902-6b08ce67a5e9',\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amzn-requestid': '1a583251-fced-460c-ad0f-ddda5589cbed',\n",
+       "  'HTTPHeaders': {'x-amzn-requestid': 'e8162fd6-2db7-4aa8-8902-6b08ce67a5e9',\n",
        "   'content-type': 'application/x-amz-json-1.1',\n",
        "   'content-length': '85',\n",
-       "   'date': 'Wed, 01 Nov 2023 17:31:54 GMT'},\n",
+       "   'date': 'Thu, 02 Nov 2023 15:23:23 GMT'},\n",
        "  'RetryAttempts': 0}}"
       ]
      },
-     "execution_count": 348,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1721,21 +1725,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 87,
    "id": "59d1e634",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "_PipelineExecution(arn='arn:aws:sagemaker:us-east-1:325223348818:pipeline/session1-pipeline/execution/jmk50mirn3i3', sagemaker_session=<sagemaker.workflow.pipeline_context.PipelineSession object at 0x10ec4bfd0>)"
-      ]
-     },
-     "execution_count": 349,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%script false --no-raise-error\n",
     "#| eval: false\n",
@@ -1789,7 +1782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 88,
    "id": "d92b121d-dcb9-43e8-9ee3-3ececb583e7e",
    "metadata": {
     "tags": []
@@ -1870,7 +1863,6 @@
     "    parser.add_argument(\"--epochs\", type=int, default=50)\n",
     "    parser.add_argument(\"--batch_size\", type=int, default=32)\n",
     "    args, _ = parser.parse_known_args()\n",
-    "    \n",
     "\n",
     "    train(\n",
     "        # This is the location where we need to save our model. SageMaker will\n",
@@ -1898,7 +1890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 89,
    "id": "14ea27ce-c453-4cb0-b309-dbecd732957e",
    "metadata": {
     "tags": []
@@ -1915,30 +1907,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8/8 - 0s - loss: 1.1155 - accuracy: 0.3054 - val_loss: 1.1165 - val_accuracy: 0.2745 - 221ms/epoch - 28ms/step\n",
-      "2/2 [==============================] - 0s 1ms/step\n"
+      "8/8 - 0s - loss: 1.0294 - accuracy: 0.2594 - val_loss: 1.0198 - val_accuracy: 0.2941 - 237ms/epoch - 30ms/step\n",
+      "2/2 [==============================] - 0s 2ms/step\n",
+      "Validation accuracy: 0.29411764705882354\n",
+      "INFO:tensorflow:Assets written to: /var/folders/4c/v1q3hy1x4mb5w0wpc72zl3_w0000gp/T/tmpnf0uqv_p/model/001/assets\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Assets written to: /var/folders/4c/v1q3hy1x4mb5w0wpc72zl3_w0000gp/T/tmpr3iji7j0/model/001/assets\n"
+      "INFO:tensorflow:Assets written to: /var/folders/4c/v1q3hy1x4mb5w0wpc72zl3_w0000gp/T/tmpnf0uqv_p/model/001/assets\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation accuracy: 0.27450980392156865\n",
       "\u001b[32m.\u001b[0m\n",
-      "\u001b[32m\u001b[32m\u001b[1m1 passed\u001b[0m\u001b[32m in 0.50s\u001b[0m\u001b[0m\n"
+      "\u001b[32m\u001b[32m\u001b[1m1 passed\u001b[0m\u001b[32m in 0.53s\u001b[0m\u001b[0m\n"
      ]
     }
    ],
    "source": [
     "%%ipytest -s\n",
-    "\n",
     "#| code-fold: true\n",
     "#| output: false\n",
     "\n",
@@ -2006,7 +1998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 90,
    "id": "90fe82ae-6a2c-4461-bc83-bb52d8871e3b",
    "metadata": {
     "tags": []
@@ -2065,7 +2057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 91,
    "id": "99e4850c-83d6-4f4e-a813-d5a3f4bb7486",
    "metadata": {
     "tags": []
@@ -2129,12 +2121,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 92,
    "id": "f367d0e3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "USE_TUNING_STEP = True and not LOCAL_MODE"
+    "USE_TUNING_STEP = False and not LOCAL_MODE"
    ]
   },
   {
@@ -2160,7 +2152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 93,
    "id": "c8c82750",
    "metadata": {},
    "outputs": [],
@@ -2195,7 +2187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 94,
    "id": "038ff2e5-ed28-445b-bc03-4e996ec2286f",
    "metadata": {
     "tags": []
@@ -2238,7 +2230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 95,
    "id": "9799ab39-fcae-41f4-a68b-85ab71b3ba9a",
    "metadata": {
     "tags": []
@@ -2248,9 +2240,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:sagemaker.image_uris:image_uri is not presented, retrieving image_uri based on instance_type, framework etc.\n",
-      "WARNING:sagemaker.estimator:No finished training job found associated with this estimator. Please make sure this estimator is only used for building workflow config\n",
-      "WARNING:sagemaker.estimator:No finished training job found associated with this estimator. Please make sure this estimator is only used for building workflow config\n",
       "INFO:sagemaker.image_uris:image_uri is not presented, retrieving image_uri based on instance_type, framework etc.\n"
      ]
     },
@@ -2265,9 +2254,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:sagemaker.image_uris:image_uri is not presented, retrieving image_uri based on instance_type, framework etc.\n",
-      "WARNING:sagemaker.estimator:No finished training job found associated with this estimator. Please make sure this estimator is only used for building workflow config\n",
-      "WARNING:sagemaker.estimator:No finished training job found associated with this estimator. Please make sure this estimator is only used for building workflow config\n",
       "INFO:sagemaker.image_uris:image_uri is not presented, retrieving image_uri based on instance_type, framework etc.\n"
      ]
     },
@@ -2282,16 +2268,16 @@
      "data": {
       "text/plain": [
        "{'PipelineArn': 'arn:aws:sagemaker:us-east-1:325223348818:pipeline/session2-pipeline',\n",
-       " 'ResponseMetadata': {'RequestId': 'c422ab2a-56dd-417b-86a9-a261b626eb2a',\n",
+       " 'ResponseMetadata': {'RequestId': '2e83bc1d-03f6-49a1-ab54-84148ea199e6',\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amzn-requestid': 'c422ab2a-56dd-417b-86a9-a261b626eb2a',\n",
+       "  'HTTPHeaders': {'x-amzn-requestid': '2e83bc1d-03f6-49a1-ab54-84148ea199e6',\n",
        "   'content-type': 'application/x-amz-json-1.1',\n",
        "   'content-length': '85',\n",
-       "   'date': 'Tue, 31 Oct 2023 20:24:42 GMT'},\n",
+       "   'date': 'Thu, 02 Nov 2023 15:23:25 GMT'},\n",
        "  'RetryAttempts': 0}}"
       ]
      },
-     "execution_count": 269,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2336,10 +2322,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 96,
    "id": "274a9b1e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "_PipelineExecution(arn='arn:aws:sagemaker:us-east-1:325223348818:pipeline/session2-pipeline/execution/ld0nrbpamr10', sagemaker_session=<sagemaker.workflow.pipeline_context.PipelineSession object at 0x3202cd250>)"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%script false --no-raise-error\n",
     "#| eval: false\n",
