Fixed predictions when endpoint doesnt exist

--- a/program/cohort.ipynb
+++ b/program/cohort.ipynb
@@ -3918,7 +3918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "53ea0ccf",
    "metadata": {},
    "outputs": [],
@@ -3944,7 +3944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "11a0effd",
    "metadata": {},
    "outputs": [],
@@ -3971,7 +3971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "5d7a5926",
    "metadata": {},
    "outputs": [],
@@ -3996,7 +3996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "id": "157b8858",
    "metadata": {
     "tags": []
@@ -4025,7 +4025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "id": "aefe580a",
    "metadata": {},
    "outputs": [],
@@ -4043,7 +4043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "id": "f84d2cd5",
    "metadata": {
     "tags": []
@@ -4093,7 +4093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "b9712905-9fe3-4148-ae6d-05b0a48e742e",
    "metadata": {
     "tags": []
@@ -4120,7 +4120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "id": "bad9f51d",
    "metadata": {
     "tags": []
@@ -4147,8 +4147,6 @@
      "text": [
       "INFO:sagemaker.processing:Uploaded None to s3://mlschool/session4-pipeline/code/998d594dff31f9c79ccb20373bc59f36/sourcedir.tar.gz\n",
       "INFO:sagemaker.processing:runproc.sh uploaded to s3://mlschool/session4-pipeline/code/2c207c809cb0e0e9a1d77e5247f961f9/runproc.sh\n",
-      "/Users/svpino/dev/ml.school/.venv/lib/python3.9/site-packages/sagemaker/workflow/pipeline_context.py:297: UserWarning: Running within a PipelineSession, there will be No Wait, No Logs, and No Job being started.\n",
-      "  warnings.warn(\n",
       "WARNING:sagemaker.workflow._utils:Popping out 'CertifyForMarketplace' from the pipeline definition since it will be overridden in pipeline execution time.\n",
       "INFO:sagemaker.image_uris:image_uri is not presented, retrieving image_uri based on instance_type, framework etc.\n"
      ]
@@ -4157,7 +4155,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using provided s3_resource\n",
       "Using provided s3_resource\n"
      ]
     },
@@ -4165,7 +4162,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:sagemaker.processing:Uploaded None to s3://mlschool/session4-pipeline/code/998d594dff31f9c79ccb20373bc59f36/sourcedir.tar.gz\n",
+      "INFO:sagemaker.processing:Uploaded None to s3://mlschool/session4-pipeline/code/998d594dff31f9c79ccb20373bc59f36/sourcedir.tar.gz\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using provided s3_resource\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "INFO:sagemaker.processing:runproc.sh uploaded to s3://mlschool/session4-pipeline/code/2c207c809cb0e0e9a1d77e5247f961f9/runproc.sh\n"
      ]
     },
@@ -4173,16 +4183,16 @@
      "data": {
       "text/plain": [
        "{'PipelineArn': 'arn:aws:sagemaker:us-east-1:325223348818:pipeline/session4-pipeline',\n",
-       " 'ResponseMetadata': {'RequestId': '6d5a4e35-fa45-488e-ba3f-f55ddd4614f7',\n",
+       " 'ResponseMetadata': {'RequestId': '7abdc749-b9eb-4888-bb1f-8a47ae0f6323',\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amzn-requestid': '6d5a4e35-fa45-488e-ba3f-f55ddd4614f7',\n",
+       "  'HTTPHeaders': {'x-amzn-requestid': '7abdc749-b9eb-4888-bb1f-8a47ae0f6323',\n",
        "   'content-type': 'application/x-amz-json-1.1',\n",
        "   'content-length': '85',\n",
-       "   'date': 'Tue, 07 Nov 2023 21:26:03 GMT'},\n",
+       "   'date': 'Thu, 09 Nov 2023 14:43:07 GMT'},\n",
        "  'RetryAttempts': 0}}"
       ]
      },
-     "execution_count": 255,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4229,7 +4239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "id": "20dfbd97",
    "metadata": {},
    "outputs": [],
@@ -4260,7 +4270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "id": "998314a3",
    "metadata": {},
    "outputs": [
@@ -4387,7 +4397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "id": "4ad4f1f2",
    "metadata": {
     "tags": []
@@ -4457,7 +4467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "id": "ad8c8019",
    "metadata": {
     "tags": []
@@ -4466,13 +4476,13 @@
     {
      "data": {
       "text/plain": [
-       "{'ResponseMetadata': {'RequestId': '010434f0-2dce-4d0b-ae97-603e5cb3f69c',\n",
+       "{'ResponseMetadata': {'RequestId': '1a96db77-3108-46b4-a2d3-1bbfce8c26a4',\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'date': 'Tue, 07 Nov 2023 20:58:17 GMT',\n",
+       "  'HTTPHeaders': {'date': 'Thu, 09 Nov 2023 14:43:17 GMT',\n",
        "   'content-type': 'application/json',\n",
        "   'content-length': '1428',\n",
        "   'connection': 'keep-alive',\n",
-       "   'x-amzn-requestid': '010434f0-2dce-4d0b-ae97-603e5cb3f69c'},\n",
+       "   'x-amzn-requestid': '1a96db77-3108-46b4-a2d3-1bbfce8c26a4'},\n",
        "  'RetryAttempts': 0},\n",
        " 'FunctionName': 'deploy_fn',\n",
        " 'FunctionArn': 'arn:aws:lambda:us-east-1:325223348818:function:deploy_fn',\n",
@@ -4483,14 +4493,14 @@
        " 'Description': '',\n",
        " 'Timeout': 600,\n",
        " 'MemorySize': 128,\n",
-       " 'LastModified': '2023-11-07T20:58:17.000+0000',\n",
-       " 'CodeSha256': 'qGJDsHLX1xyuAMqzd+FAMahWn+e06r2I9LFUcELj/PY=',\n",
+       " 'LastModified': '2023-11-09T14:43:17.000+0000',\n",
+       " 'CodeSha256': 'yBejWKZrqcjwF4d3/Z4K7Ys8gY/7rD/EHOWdrFcs6Nk=',\n",
        " 'Version': '$LATEST',\n",
        " 'Environment': {'Variables': {'ROLE': 'arn:aws:iam::325223348818:role/service-role/AmazonSageMaker-ExecutionRole-20230312T160501',\n",
        "   'DATA_CAPTURE_DESTINATION': 's3://mlschool/penguins/monitoring/data-capture',\n",
        "   'ENDPOINT': 'penguins-endpoint'}},\n",
        " 'TracingConfig': {'Mode': 'PassThrough'},\n",
-       " 'RevisionId': 'c334887e-9fc5-4e7e-9a86-04c926572c3e',\n",
+       " 'RevisionId': '643e8b24-f0ab-4e35-99dd-9b13e078a5fc',\n",
        " 'Layers': [],\n",
        " 'State': 'Active',\n",
        " 'LastUpdateStatus': 'InProgress',\n",
@@ -4503,7 +4513,7 @@
        " 'RuntimeVersionConfig': {'RuntimeVersionArn': 'arn:aws:lambda:us-east-1::runtime:6cf63f1a78b5c5e19617d6b4b111370fdbda415ea91bdfdc5aacef9fee76b64a'}}"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4548,7 +4558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "id": "27ce7cc5",
    "metadata": {},
    "outputs": [],
@@ -4575,7 +4585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "id": "2a878179",
    "metadata": {},
    "outputs": [],
@@ -4599,7 +4609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "id": "dc714a97",
    "metadata": {
     "tags": []
@@ -4627,7 +4637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "id": "d74be86b",
    "metadata": {},
    "outputs": [
@@ -4665,7 +4675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "id": "3cc966fb-b611-417f-a8b8-0c5d2f95252c",
    "metadata": {
     "tags": []
@@ -4680,20 +4690,7 @@
       "Torgersen,39.5,17.4,186.0,3800.0,FEMALE\n",
       "Torgersen,40.3,18.0,195.0,3250.0,FEMALE\n",
       "\n",
-      "[\n",
-      "  {\n",
-      "    \"prediction\": \"Adelie\",\n",
-      "    \"confidence\": 0.818532705\n",
-      "  },\n",
-      "  {\n",
-      "    \"prediction\": \"Adelie\",\n",
-      "    \"confidence\": 0.716083\n",
-      "  },\n",
-      "  {\n",
-      "    \"prediction\": \"Adelie\",\n",
-      "    \"confidence\": 0.75765878\n",
-      "  }\n",
-      "]\n"
+      "An error occurred (ValidationError) when calling the InvokeEndpoint operation: Endpoint penguins-endpoint of account 325223348818 not found.\n"
      ]
     }
    ],
@@ -4730,19 +4727,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "id": "ce3d33f0",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'prediction': 'Gentoo', 'confidence': 0.48949939}"
-      ]
-     },
-     "execution_count": 259,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "An error occurred (ValidationError) when calling the InvokeEndpoint operation: Endpoint penguins-endpoint of account 325223348818 not found.\n"
+     ]
     }
    ],
    "source": [
@@ -4763,8 +4757,11 @@
     "    sagemaker_session=sagemaker_session\n",
     ")\n",
     "\n",
-    "response = predictor.predict(sample)\n",
-    "json.loads(response.decode(\"utf-8\"))"
+    "try:\n",
+    "    response = predictor.predict(sample)\n",
+    "    print(json.loads(response.decode(\"utf-8\")))\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   },
   {
@@ -4777,24 +4774,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "id": "240aaff2",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Gentoo,0.48949939\\n'"
-      ]
-     },
-     "execution_count": 260,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "An error occurred (ValidationError) when calling the InvokeEndpoint operation: Endpoint penguins-endpoint of account 325223348818 not found.\n"
+     ]
     }
    ],
    "source": [
-    "response = predictor.predict(sample, initial_args={\"Accept\": \"text/csv\"})\n",
-    "response.decode(\"utf-8\")"
+    "try:\n",
+    "    response = predictor.predict(sample, initial_args={\"Accept\": \"text/csv\"})\n",
+    "    print(response.decode(\"utf-8\"))\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   },
   {
@@ -4819,21 +4816,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "id": "8c3e851a-2416-4a0b-b8a1-c483cde3d776",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:sagemaker:Deleting endpoint configuration with name: penguins-endpoint-config-1107213807\n",
-      "INFO:sagemaker:Deleting endpoint with name: penguins-endpoint\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%script false --no-raise-error\n",
     "#| eval: false\n",
